update paths with openid
