# swagger.json
@@ -27,54 +27,85 @@
             "description": "Unexpected response - internal error"
           }
         },
-        "security": [{ "api_key": ["read"] }]
+        "security": [
+          {
+            "api_key": ["read"]
+          }
+        ]
       }
     },
-    "/v1/data/{id}": {
+    "/v1/person/{id}": {
       "get": {
-        "tags": ["data"],
-        "operationId": "getDataById",
-        "summary": "Data with ID",
-        "description": "Returns the earlier stored data-object with the given ID.\n\n_(Sample.getData)_\n\n",
-        "parameters": [{ "$ref": "#/parameters/DataId" }],
+        "tags": ["person"],
+        "operationId": "getPersonById",
+        "summary": "Person with ID",
+        "description": "Returns the person-object with the given ID.\n\n_(Sample.getPerson)_\n\n",
+        "parameters": [
+          {
+            "$ref": "#/parameters/PersonId"
+          }
+        ],
         "responses": {
           "200": {
-            "description": "The requested data",
-            "schema": { "$ref": "#/definitions/DataObject" }
+            "description": "The requested person",
+            "schema": {
+              "$ref": "#/definitions/PersonObject"
+            }
           },
           "401": {
             "description": "This endpoint is secured - **credentials are missing or invalid**."
           },
           "404": {
-            "description": "No data found for given ID",
+            "description": "No person found for given ID",
             "schema": {
               "type": "object",
-              "properties": { "message": { "type": "string", "example": "document not found" } }
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Document not found"
+                }
+              }
             }
           },
           "default": {
             "description": "Unexpected response - internal error"
           }
         },
-        "security": [{ "api_key": ["read"] }]
+        "security": [
+          {
+            "api_key": ["read"]
+          }
+        ]
       },
       "post": {
-        "tags": ["data"],
-        "operationId": "postDataById",
-        "summary": "Store data",
-        "description": "Saves the given data-object, overwriting any old data with the same ID.\n\n_(Sample.postData)_",
-        "parameters": [{ "$ref": "#/parameters/DataId" }, { "$ref": "#/parameters/DataObject" }],
+        "tags": ["person"],
+        "operationId": "postPersonById",
+        "summary": "Store person data",
+        "description": "Saves the given person-object, overwriting any old data with the same ID.\n\n_(Sample.postData)_",
+        "parameters": [
+          {
+            "$ref": "#/parameters/PersonId"
+          },
+          {
+            "$ref": "#/parameters/PersonObject"
+          }
+        ],
         "responses": {
           "200": {
-            "description": "The stored data object",
-            "schema": { "$ref": "#/definitions/DataObject" }
+            "description": "The stored person object",
+            "schema": {
+              "$ref": "#/definitions/PersonObject"
+            }
           },
           "400": {
             "description": "Invalid request",
             "schema": {
               "type": "object",
               "properties": {
-                "message": { "type": "string", "example": "Sample validation failed: name: Name is required." }
+                "message": {
+                  "type": "string",
+                  "example": "Sample validation failed: firstName: First name is required."
+                }
               }
             }
           },
@@ -85,9 +116,91 @@
             "description": "Unexpected response - internal error"
           }
         },
-        "security": [{ "api_key": ["write"] }]
+        "security": [
+          {
+            "api_key": ["write"]
+          }
+        ]
       }
     }
+  },
+  "put": {
+    "tags": ["person"],
+    "operationId": "getPersonById",
+    "summary": "Update Person with ID",
+    "description": "Updates the person-object with the given ID.\n\n_(Sample.getPerson)_\n\n",
+    "parameters": [
+      {
+        "$ref": "#/parameters/PersonId"
+      },
+      {
+        "$ref": "#/parameters/PersonObject"
+      }
+    ],
+    "responses": {
+      "200": {
+        "description": "The requested person",
+        "schema": {
+          "$ref": "#/definitions/PersonObject"
+        }
+      },
+      "400": {
+        "description": "Invalid request",
+        "schema": {
+          "$ref": "#/definitions/ErrorResponse"
+        }
+      },
+      "401": {
+        "description": "This endpoint is secured - **credentials are missing or invalid**."
+      },
+      "404": {
+        "description": "No person found for the given ID",
+        "schema": {
+          "$ref": "#/definitions/ErrorResponse"
+        }
+      },
+      "default": {
+        "description": "Unexpected response - internal error"
+      }
+    },
+    "security": [
+      {
+        "api_key": ["write"]
+      }
+    ]
+  },
+  "delete": {
+    "tags": ["person"],
+    "operationId": "deletePersonData",
+    "summary": "Delete person data",
+    "description": "Deletes the person object with the given ID.\n\n_(Sample.deletePerson)_",
+    "parameters": [
+      {
+        "$ref": "#/parameters/PersonId"
+      }
+    ],
+    "responses": {
+      "204": {
+        "description": "Person deleted successfully"
+      },
+      "401": {
+        "description": "This endpoint is secured - **credentials are missing or invalid**."
+      },
+      "404": {
+        "description": "No person found for the given ID",
+        "schema": {
+          "$ref": "#/definitions/ErrorResponse"
+        }
+      },
+      "default": {
+        "description": "Unexpected response - internal error"
+      }
+    },
+    "security": [
+      {
+        "api_key": ["write"]
+      }
+    ]
   },
   "securityDefinitions": {
     "api_key": {
@@ -97,29 +210,49 @@
     }
   },
   "parameters": {
-    "DataId": {
+    "PersonId": {
       "in": "path",
-      "description": "ID of data object, e.g. \"123\"",
+      "description": "ID of person object, e.g. \"123\"",
       "name": "id",
       "required": true,
       "type": "string"
     },
-    "DataObject": {
+    "PersonObject": {
       "in": "body",
-      "description": "Data to save with given ID",
-      "name": "data",
+      "description": "Person to save or update with given ID",
+      "name": "person",
       "required": true,
       "schema": {
-        "type": "object",
-        "properties": { "name": { "type": "string", "example": "John Doe" } }
+        "$ref": "#/definitions/PersonObject"
       }
     }
   },
   "definitions": {
-    "DataObject": {
+    "PersonObject": {
+      "type": "object",
       "properties": {
-        "id": { "type": "string", "example": "123" },
-        "name": { "type": "string", "example": "John Doe" }
+        "id": {
+          "type": "string",
+          "example": "123"
+        },
+        "firstName": {
+          "type": "string",
+          "example": "John"
+        },
+        "lastName": {
+          "type": "string",
+          "example": "Doe"
+        }
+      },
+      "required": ["id", "firstName", "lastName"]
+    },
+    "ErrorResponse": {
+      "type": "object",
+      "properties": {
+        "message": {
+          "type": "string",
+          "example": "Person not found"
+        }
       }
     }
   }
